# claude-conversations

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
sql/: schema.sql
src/claude_conversations/: __init__.py  categories.py  classifier.py  cli.py  config.py  db.py  embedding.py  importer.py  indexer.py  parse.py  render.py
src/claude_conversations/web/: __init__.py  app.py
src/claude_conversations/web/static/: style.css
src/claude_conversations/web/templates/: _messages.html  base.html  detail.html  list.html  review.html
